Update launch4j config (should work on Java 9/10)